# GroBro

./: .codecov.yml  .coverage  .gitignore  CHANGELOG.md  CONFIGURATION.md  DEVELOPMENT.md  Dockerfile  README.md  config.yaml  docker-compose.yml  entrypoint.sh  pyproject.toml  requirements.txt  run.sh
.github/workflows/: docker-build.yml  ghcr-cleanup.yml  python-code-check.yml  tests.yml
grobro/: growatt_noah_registers.json  ha_bridge.py
grobro/grobro/: client.py  growatt_neo_registers.json  parser.py
grobro/ha/: client.py  growatt_neo_commands.json  growatt_neo_states.json  growatt_noah_states.json
grobro/model/: __init__.py  command.py  device_config.py  growatt_mod_registers.json  growatt_neo_registers.json  growatt_nexa_registers.json  growatt_noah_registers.json  growatt_registers.py  growatt_spf_registers.json  growatt_xh2_registers.json  modbus_function.py  modbus_message.py  mqtt_config.py  neo_command.py  neo_messages.py  neo_register.py  neo_register_value.py  noah_command.py  registers.py
grobro/tools/: grocli.py  reg_msg_decoder.py
grobro/util/: tlv.py
scripts/: enable_xh2_entities.py  enable_xh_entities.py
tests/: test_builder.py  test_grobro_client.py  test_ha_bridge.py  test_ha_client.py  test_integration.py  test_parser.py
tests/model/: test_commands.py  test_models.py
translations/: de.yaml  en.yaml
